Completed Header-cart and Header

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
 				</div>
 				<div class="main-header-cart clearfix">
 					<a href="#" class="main-header-cart-pic">
-						
+					</a>
+					<a class="main-header-cart-inyourcart" href="#">
+						<span class="main-header-cart-inyourcart-text">
+							В Вашей корзине
+						</span>
+						<span class="main-header-cart-inyourcart-items">
+							товаров: <span class="main-header-cart-inyourcart-itemsNum" id="itemsNum">0</span> 
+						</span>
+						<span class="main-header-cart-inyourcart-items">
+							на сумму: <span class="main-header-cart-inyourcart-itemsNum" id="itemsSum">0 руб.</span> 
+						</span>
 					</a>
 				</div>
 			</div>			
