--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
 </head>
 <body>
 	<div id="main-wrap">
+		<!-- HEADER -->
 		<header id="main-header">
+			<!-- CONTACT INFORMATION -->
 			<div class="container clearfix">
 				<div class="main-header-logo">
 					<a href="#" class="main-header-logo-pic"></a>
 				</div>
 				<div class="main-header-phone">
-					<span class="main-header-phone-text">
+					<a href="tel:8-495-215-1585" class="main-header-phone-text">
 						8 (495) 215-1585
-					</span>
+					</a>
 					<i class="fa fa-phone" aria-hidden="true"></i>
 					<span class="main-header-phone-subtext">
 						Общий многоканальный телефон
 					</span>
 				</div>
 				<div class="main-header-address">
-					<span class="main-header-address-text">
 					<i class="fa fa-location-arrow" aria-hidden="true"></i>
+					<span class="main-header-address-text">
 						 г. Москва, ул. Шаболовка, <br>д. 34, стр. 3
 					</span>
 					<span class="main-header-address-subtext">
@@ -46,8 +48,23 @@
 						</span>
 					</a>
 				</div>
-			</div>			
+			</div>
+			<!-- END OF CONTACT INFORMATION -->
+			<div id="top-nav" class="clearfix">
+				<ul id="top-nav-list">
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Новости</a></li>
+					<li><a href="#">О компании</a></li>
+					<li><a href="#">Оплата и доставка</a></li>
+					<li><a href="#">Статьи</a></li>
+					<li><a href="#">Контакты</a></li>
+					<li><a href="#">Прайс</a></li>
+				</ul>
+			</div>
+
 		</header>
+		<!-- END OF HEADER -->
+
 	</div>
 </body>
 </html>
