Added categories.html, cat-s.css and made few changes in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- HEADER -->
 		<header id="main-header">
 			<!-- CONTACT INFORMATION -->
-			<div class="container clearfix">
+			<div class="main_container clearfix">
 				<div class="main-header-logo">
 					<a href="#" class="main-header-logo-pic"></a>
 				</div>
@@ -65,7 +65,6 @@
 		<hr class="shadowHr">
 		</header>
 		<!-- END OF HEADER -->
-		
 		<!-- MAIN -->
 		<main class="clearfix">
 			<!-- LEFT-NAV -->
@@ -106,7 +105,6 @@
 						<li><a href="#">Оголовок</a></li>
 					</ul>
 				</div>
-
 				<!-- NEWSBAR -->
 				<div class="newsbar">
 					<span class="newsbar-title">
@@ -170,105 +168,106 @@
 				</div>
 				<!-- END OF ARTICLESBAR -->
 			</div>
-			<!-- END OF LEFT NAV -->
-
-			<!-- SLIDER -->
-			<div class="slider clearfix">
-				<div class="container clearfix">
-					<div class="slider-pic" id="sliderPic" onmouseover="stopRunning()" onmouseleave="startRunning()">
-						<div class="slider-pic-text" id="sliderText">
-							Бесплатная резка в размер
-						</div>
-						<div class="slider-pic-balls">
-							<i class="fa fa-circle active" aria-hidden="true" id="circle0" onmouseup="clickCircle(0)" ></i>
-							<i class="fa fa-circle" aria-hidden="true" id="circle1" onmouseup="clickCircle(1)"></i>
-							<i class="fa fa-circle" aria-hidden="true" id="circle2" onmouseup="clickCircle(2)"></i>
-							<i class="fa fa-circle" aria-hidden="true" id="circle3" onmouseup="clickCircle(3)"></i>
-							<i class="fa fa-circle" aria-hidden="true" id="circle4" onmouseup="clickCircle(4)"></i>
+			<!-- END OF LEFT NAV -->			
+			<div class="container clearfix">
+				<!-- SLIDER -->
+				<div class="slider clearfix">
+					<div class="container clearfix">
+						<div class="slider-pic" id="sliderPic" onmouseover="stopRunning()" onmouseleave="startRunning()">
+							<div class="slider-pic-text" id="sliderText">
+								Бесплатная резка в размер
+							</div>
+							<div class="slider-pic-balls">
+								<i class="fa fa-circle active" aria-hidden="true" id="circle0" onmouseup="clickCircle(0)" ></i>
+								<i class="fa fa-circle" aria-hidden="true" id="circle1" onmouseup="clickCircle(1)"></i>
+								<i class="fa fa-circle" aria-hidden="true" id="circle2" onmouseup="clickCircle(2)"></i>
+								<i class="fa fa-circle" aria-hidden="true" id="circle3" onmouseup="clickCircle(3)"></i>
+								<i class="fa fa-circle" aria-hidden="true" id="circle4" onmouseup="clickCircle(4)"></i>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- END OF SLIDER -->
+				<!-- END OF SLIDER -->
 
-			<!-- NEWS -->
-			<div class="news">
-				<div class="content clearfix">
-					<a href="#" class="article">
-						<span class="article-title">Сортовой прокат</span>
-						<span class="article-text">
-							Арматура <br>
-							Проволока вязальная<br>
-							Квадрат стальной
-						</span>
-					</a>
-					<a href="#" class="article">
-						<span class="article-title">Сортовой прокат</span>
-						<span class="article-text">
-							Арматура <br>
-							Проволока вязальная<br>
-							Квадрат стальной
-						</span>
-					</a>
-					<a href="#" class="article">
-						<span class="article-title">Сортовой прокат</span>
-						<span class="article-text">
-							Арматура <br>
-							Проволока вязальная<br>
-							Квадрат стальной
-						</span>
-					</a>
-					<a href="#" class="article">
-						<span class="article-title">Сортовой прокат</span>
-						<span class="article-text">
-							Арматура <br>
-							Проволока вязальная<br>
-							Квадрат стальной
-						</span>
-					</a>
-					<a href="#" class="article">
-						<span class="article-title">Сортовой прокат</span>
-						<span class="article-text">
-							Арматура <br>
-							Проволока вязальная<br>
-							Квадрат стальной
-						</span>
-					</a>
-					<a href="#" class="article">
-						<span class="article-title">Сортовой прокат</span>
-						<span class="article-text">
-							Арматура <br>
-							Проволока вязальная<br>
-							Квадрат стальной
-						</span>
-					</a>
-					<a href="#" class="article">
-						<span class="article-title">Сортовой прокат</span>
-						<span class="article-text">
-							Арматура <br>
-							Проволока вязальная<br>
-							Квадрат стальной
-						</span>
-					</a>
-					<a href="#" class="article">
-						<span class="article-title">Сортовой прокат</span>
-						<span class="article-text">
-							Арматура <br>
-							Проволока вязальная<br>
-							Квадрат стальной
-						</span>
-					</a>
-					<a href="#" class="article">
-						<span class="article-title">Сортовой прокат</span>
-						<span class="article-text">
-							Арматура <br>
-							Проволока вязальная<br>
-							Квадрат стальной
-						</span>
-					</a>
+				<!-- NEWS -->
+				<div class="news">
+					<div class="content clearfix">
+						<a href="#" class="article">
+							<span class="article-title">Сортовой прокат</span>
+							<span class="article-text">
+								Арматура <br>
+								Проволока вязальная<br>
+								Квадрат стальной
+							</span>
+						</a>
+						<a href="#" class="article">
+							<span class="article-title">Сортовой прокат</span>
+							<span class="article-text">
+								Арматура <br>
+								Проволока вязальная<br>
+								Квадрат стальной
+							</span>
+						</a>
+						<a href="#" class="article">
+							<span class="article-title">Сортовой прокат</span>
+							<span class="article-text">
+								Арматура <br>
+								Проволока вязальная<br>
+								Квадрат стальной
+							</span>
+						</a>
+						<a href="#" class="article">
+							<span class="article-title">Сортовой прокат</span>
+							<span class="article-text">
+								Арматура <br>
+								Проволока вязальная<br>
+								Квадрат стальной
+							</span>
+						</a>
+						<a href="#" class="article">
+							<span class="article-title">Сортовой прокат</span>
+							<span class="article-text">
+								Арматура <br>
+								Проволока вязальная<br>
+								Квадрат стальной
+							</span>
+						</a>
+						<a href="#" class="article">
+							<span class="article-title">Сортовой прокат</span>
+							<span class="article-text">
+								Арматура <br>
+								Проволока вязальная<br>
+								Квадрат стальной
+							</span>
+						</a>
+						<a href="#" class="article">
+							<span class="article-title">Сортовой прокат</span>
+							<span class="article-text">
+								Арматура <br>
+								Проволока вязальная<br>
+								Квадрат стальной
+							</span>
+						</a>
+						<a href="#" class="article">
+							<span class="article-title">Сортовой прокат</span>
+							<span class="article-text">
+								Арматура <br>
+								Проволока вязальная<br>
+								Квадрат стальной
+							</span>
+						</a>
+						<a href="#" class="article">
+							<span class="article-title">Сортовой прокат</span>
+							<span class="article-text">
+								Арматура <br>
+								Проволока вязальная<br>
+								Квадрат стальной
+							</span>
+						</a>
+					</div>
 				</div>
+				<!-- END OF NEWS -->
 			</div>
-			<!-- END OF NEWS -->
 		</main>
 		<!-- END OF MAIN -->
 
