--- a/category.html
+++ b/category.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/category.css">
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 	<script src="js/main.js"></script>
 	<title>Мегаполис</title>
@@ -12,7 +13,7 @@
 		<!-- HEADER -->
 		<header id="main-header">
 			<!-- CONTACT INFORMATION -->
-			<div class="container clearfix">
+			<div class="header_container clearfix">
 				<div class="main-header-logo">
 					<a href="#" class="main-header-logo-pic"></a>
 				</div>
@@ -53,7 +54,7 @@
 			<!-- END OF CONTACT INFORMATION -->
 			<div id="top-nav" class="clearfix">
 				<ul id="top-nav-list">
-					<li><a href="#">Главная</a></li>
+					<li><a href="index.html">Главная</a></li>
 					<li><a href="#">Новости</a></li>
 					<li><a href="#">О компании</a></li>
 					<li><a href="#">Оплата и доставка</a></li>
@@ -65,10 +66,143 @@
 		<hr class="shadowHr">
 		</header>
 		<!-- END OF HEADER -->
-		
 		<!-- MAIN -->
 		<main class="clearfix">
-			
+			<div class="container">
+				<!-- LEFT-NAV -->
+				<div class="left-nav-container">
+					<div class="left-nav">
+						<div class="left-nav-list-container">
+							<ul id="left-nav-list">
+								<li><a href="#">Арматура <span class="whiteArrow">></span></a>
+									<ul>
+										<li><a href="#"></a>Арматура А1</li>
+										<li><a href="#"></a>Арматура А3</li>
+										<li><a href="#"></a>Арматура композитная</li>
+									</ul>
+								</li>
+								<li><a href="#">Проволока вязальная</a></li>
+								<li><a href="#">Квадрат стальной</a></li>
+								<li><a href="#">Балка двутавровая</a></li>
+								<li><a href="#">Уголок</a></li>
+								<li><a href="#">Швеллер</a></li>
+								<li><a href="#">Лист металлический<span class="whiteArrow">></span></a>
+									<ul>
+										<li><a href="#"></a>Арматура А1</li>
+										<li><a href="#"></a>Арматура А3</li>
+										<li><a href="#"></a>Арматура композитная</li>
+									</ul>
+								</li>
+								<li><a href="#">Полоса металлическая</a></li>
+								<li><a href="#">Профнастил<span class="whiteArrow">></span></a>
+									<ul>
+										<li><a href="#"></a>Арматура А1</li>
+										<li><a href="#"></a>Арматура А3</li>
+										<li><a href="#"></a>Арматура композитная</li>
+									</ul>
+									</li>
+								<li><a href="#">Трубной прокат</a></li>
+								<li><a href="#">Сетка металлическая</a></li>
+								<li><a href="#">Дополнительные материалы</a></li>
+								<li><a href="#">Винтовые сваи</a></li>
+								<li><a href="#">Оголовок</a></li>
+							</ul>
+						</div>
+						<!-- NEWSBAR -->
+						<div class="newsbar">
+							<span class="newsbar-title">
+								Новости
+							</span>
+							<a class="newsbar-article" href="#">
+								<img class="newsbar-article-pic" src="img/articleMini1.jpg">
+								<span class="newsbar-article-text">
+									В 2016 г. Золото Камчатки добудет свыше 5 т желтого металла
+								</span>
+								<span class="newsbar-article-date">
+									28.10.2016
+								</span>
+								<hr class="article_separator">
+							</a>
+							<a class="newsbar-article" href="#">
+								<img class="newsbar-article-pic" src="img/articleMini1.jpg">
+								<span class="newsbar-article-text">
+									В 2016 г. Золото Камчатки добудет свыше 5 т желтого металла
+								</span>
+								<span class="newsbar-article-date">
+									28.10.2016
+								</span>
+								<hr class="article_separator">
+							</a>
+							<a class="newsbar-article" href="#">
+								<img class="newsbar-article-pic" src="img/articleMini1.jpg">
+								<span class="newsbar-article-text">
+									В 2016 г. Золото Камчатки добудет свыше 5 т желтого металла
+								</span>
+								<span class="newsbar-article-date">
+									28.10.2016
+								</span>
+								<hr class="article_separator">
+							</a>
+						</div>
+						<!-- END OF NEWSBAR -->
+						<!-- ARTICLESBAR -->
+						<div class="articlesbar">
+							<span class="articlesbar-title">
+								Статьи
+							</span>
+							<a class="articlesbar-article" href="#">
+								<span class="articlesbar-article-title">
+									Как сделать заказ товара через наш интернет магазин металлопроката
+								</span>
+								<span class="articlesbar-article-text">
+									Уважаемые клиенты, посетители нашего интернет магазина и конкуренты специально для Вас,  мы решили сделать небольшой обзор-статью на тему   "Преимущества и недостатки заказа товара через интернет магазин"
+								</span>
+								<hr class="article_separator">
+							</a>
+							<a class="articlesbar-article" href="#">
+								<span class="articlesbar-article-title">
+									Забор из профильной трубы
+								</span>
+								<span class="articlesbar-article-text">
+									В этой статье мы рассмотрим использование профильной трубы при изготовлении забора
+								</span>
+								<hr class="article_separator">
+							</a>
+						</div>
+						<!-- END OF ARTICLESBAR -->
+					</div>
+				</div>
+				<!-- END OF LEFT NAV -->	
+				<!-- CATEGORY -->		
+				<div class="category-container clearfix">
+					<div class="category">
+						<span class="category-title">
+							Сортовый прокат
+						</span>
+						<div class="category-elements">
+							<a href="table.html" class="category-elements-item">
+								<span class="category-elements-item-pic"></span>
+								<span class="category-elements-item-text">
+									Арматура
+								</span>
+							</a>
+							<a href="#" class="category-elements-item">
+								<span class="category-elements-item-pic"  style="background-image: url('img/category/provoloka.png');"></span>
+								<span class="category-elements-item-text">
+									Проволока вязальная
+								</span>
+							</a>
+							<a href="#" class="category-elements-item">
+								<span class="category-elements-item-pic" style="background-image: url('img/category/kvadrat.png');"></span>
+								<span class="category-elements-item-text">
+									Квадрат стальной
+								</span>
+							</a>
+						</div>
+					</div>
+				</div>
+				<!-- END OF CATEGORY -->
+			</div>
 		</main>
 		<!-- END OF MAIN -->
 
